<resources>
    <string name="app_name">Cilacap Integrated Tourism</string>
    <string name="app_name_des">Cultural Exploration in Cilacap District Using Integrated Tourism Concept</string>
    <string name="peta_cilacap">Cilacap Integrated Tourism</string>
    <string name="prodi">History Educational</string>
    <string name="kampus">University Muhammadiyah PROF. DR. HAMKA</string>
    <string name="lang">Change Language?</string>
    <string name="web"><![CDATA[<hr /><u>http://www.uhamka.ac.id/</u>]]></string>
    <string name="bahasa">Language</string>
    <string name="opsi">Option</string>
    <string name="versi">Version 1.10.15</string>
    <string name="setting">Setting</string>
    <string name="back">Back</string>
    <string name="expand">Read More</string>
    <string name="lokasi">Location</string>
    <string name="deskripsi">Description</string>
    <string name="next">Read more</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Language</string>
    <string name="aplikasi">About Application</string>
    <string name="cilacap">Cilacap Profile</string>
    <string name="doubleback">Double tap to exit application</string>
    <string name="selok">Selok</string>
    <string name="maos">Maos</string>
    <string name="gumilir">Gumilir</string>
    <string name="jeruk">Jeruklegi</string>
    <string name="kawu">Kawunganten</string>
    <string name="gandrung">Gandrungmangun</string>
    <string name="sidareja">Sidareja</string>
    <string name="cipari">Cipari</string>
    <string name="other">Other</string>
    <string name="stasiun">Station</string>
    <string name="toastawal">Application Google Maps must be installed!</string>
    <string name="noimg">Gallery not avalailabe</string>
    <string name="about">About</string>
    <string name="cilacap_selatan">South Cilacap</string>
    <string name="cilacap_tengah">Central Cilacap</string>
    <string name="adipala">Adipala</string>
    <string name="kroya">Kroya</string>
    <string name="majenang">Majenang</string>
    <string name="kampunglaut">Kampung Laut</string>
    <string name="wanareja">Wanareja</string>
    <string name="kesugihan">Kesugihan</string>
    <string name="direksi">Get Direction</string>
    <string name="readmore">Read More</string>
    <string name="sentuh">Tap for description</string>
    <string name="jambu">Jambu Temple Heritage</string>
    <string name="aluntitle">Alun-Alun Cilacap</string>
    <string name="alunalt">Jl. Jendral Sudirman, Tegalreja</string>
    <string name="alunmap">Peta</string>
    <string name="alundes"><![CDATA[<hr />
<p>Almost the same as the square in other cities located on Java Island, Cilacap Square uses the Macapat system (Mocopat) in which there are mosques, government offices, squares, and beringin trees.</p>
<p>In the Office of the Cilacap Regent itself there is a cultural heritage object in it, namely the gate of the Regents Office and the Bupati I private room.</p>
<p>In the morning, usually used by the public to exercise. Meanwhile, in the evening is usually used as a place to enjoy the crowd of Cilacap City.</p>
<p>The city is always crowded by young people and even big families who want to see the city crowd.
</p>]]></string>
    <string name="bentengtitle">Benteng Pendem</string>
    <string name="bentengalt">Jl. Benteng</string>
    <string name="bentengdes"><![CDATA[<hr /> <p>In Dutch called Kusbatterij Op De Lantong Te Tjilatjap.</p>
<p>Built by the Royal Dutch Army from 1861-1879 for Dutch defense in the face of enemy attacks, both from the outside and from within until 1942.</p>
<p>In 1952-1962 it became the headquarters of Banteng Loreng Kesatuan Central Java and in 1962-1965 became the landing place of RPKAD troops. </p>
<p>On November 26, 1986, Pendem Fort was restored and on 28 April 1987 until now it was opened as a tourist attraction.</p>]]></string>
    <string name="lapastitle">Nusakambangan Prison</string>
    <string name="lapastitle2">Nusakambangan Prison</string>
    <string name="lapasalt">Nusakambangan Island</string>
    <string name="lapasdes"><![CDATA[<hr />
<p>Nusakambangan Prison has been established since the Dutch colonized Indonesia. The colonial government then examined several islands in Indonesia that would be used as a prison for the prisoners.</p>
<p>Finally, in 1908, the Dutch Governor decided to make Nusakambangan a place of residence for those who were punished.</p>
<p>Then, set up as a prison island through the Staatblad Ordinance No. 25 August 10, 1912. The authority of the island was handed over to the Department of Van Justitie (Department of Justice), now Kemenkumham.</p>
<p>After Indonesia became independent, it was used as a prison for prisoners who were considered to have committed serious crimes.</p>
<p>To go to Nusakambangan Prison, tourists can cross through Wijaya Pura Harbor in Cilacap to go to Sodong Port in Nusakambangan. </p>
<p>Sodong Port is also a historic harbor, since it was founded in the Dutch Colonial era. </p>
<p>In addition, tourists can also hire the services of crossing the island using a boat that is in Turtle Bay Beach area. </p>
]]></string>
    <string name="benlingtitle">Benteng Lingkar</string>
    <string name="benlingalt">Nusakambangan Island</string>
    <string name="benlingdes"><![CDATA[<hr />
<p>The Circle Benteng was built in 1617 and was established in conjunction with Benteng Karang Bolong. </p>
<p>The Circle Benteng is a smaller fort compared to Benteng Karang Bolong. </p>
<p>The structure of the building is now much damaged, so no known original form of this fort. </p>
<p>To get to Benteng Lingkar, tourists can hire the services of island crossing by boat located in Turtle Bay Beach area. </p>
]]></string>
    <string name="benkartitle">Benteng Karang Bolong</string>
    <string name="benkaralt">Nusakambangan Island</string>
    <string name="benkardes"><![CDATA[<hr />
<P> The fort was erected together with the Ring Fortress. </p>
<p> The function of Benteng Karang Bolong by the Dutch army is as a polar defense to ward off enemy attacks coming from the sea or attacking enemy ships and as a spice storage warehouse. </p>
<p> From Benteng Karang Bolong this can be watched shipping line in Indonesia Ocean. Between Pendem Fort and Karang Bolong Fort are both complementary in terms of monitoring Turtle Bay waters. </p>
<p> The fort has an area of ​​6,000 m2 with 3 main fortresses in which one of them is a three-story fortress that has a large meeting room and is equipped with a cannon, so it can also be called the Artillery Fortress. </p>
<p> The fort is made of brick berlepa and the whole consists of 4 floors, ie 2 floors above ground level, while two floors are below ground level. </p>
<P> It has a number of rooms, among them is a barracks room of soldiers, detention rooms, and logistics rooms. </p>
<P> To get to Benteng Karang Bolong, tourists can hire the services of crossing the island by boat located in Turtle Bay Beach area. </p>
]]></string>
    <string name="kerkhofftitle">Kerkhoff Cilacap</string>
    <string name="kerkhoffalt">South Cilacap</string>
    <string name="kerkhoffdes"><![CDATA[<hr />
<p> It is close to Pendem Fortress or Turtle Bay Beach. </p>
<p> There are hundreds of graves belonging to Dutch citizens and foreigners from other countries known to be buried in the area currently used for Cilacap Christians. </p>
<p> Some of them during their lifetime were important people such as Resident Assistants, architects of Fortress Pendem, Pirates, and others. </p>
<p> From the research of Central Java Cultural Heritage Research Institute, found the oldest grave of Therese von Lutzow, a German citizen who died in 1852. </p>
]]></string>
    <string name="klentengtitle">The Temple Lam Tjeng Kiong</string>
    <string name="klentengtitle2">Lam Tjeng Kiong</string>
    <string name="klentengalt">Jl. RE. Martadinata No.4, Tambakreja</string>
    <string name="klentengdes"><![CDATA[<hr />
<p> The temple was founded in 1879. </p>
<p> The name of this temple consists of three words, namely Lam means south, Tjeng means clean or holy, and Kiong means palace. </p>
<p> Thus, Lam Tjeng Kiong means the Southern Palace that is Clean or Holy. As the name implies, this temple is facing southward. </p>
<p> In this pagoda, there are about 200 gods believed by the people and each made a replica or a picture of a statue. There is also a Barongsai that is often used to enliven religious events. </p>
]]></string>
    <string name="teluktitle">Teluk Penyu</string>
    <string name="telukalt">Jl. Pasir Emas</string>
    <string name="telukdes"><![CDATA[<hr />
<p> This beach is adjacent to Fort Pendem. </p>
<p> The beach is sandy and overgrown with trees giving shade to the tourists. </p>
<p> The panoramic beauty of this beautiful beach can be enjoyed by tourists, both at sunrise and at sunset. </p>
<p> Along the coast, you can find a variety of typical Cilacap food, such as tempe mendoan and seafood specialties and souvenirs in the form of shell crafts for tourists who want to make it as souvenirs. </p>
]]></string>
    <string name="kalimpattitle">Kalimpat Beach</string>
    <string name="kalimpatalt">Nusakambangan Island, Tambakreja</string>
    <string name="kalimpatdes"><![CDATA[<hr />
<p> This beach is located southeast of Nusakambangan Island. It is quite far from Benteng Lingkar and Benteng Karang Bolong. </p>
<p> To get to the beach, tourists can use the services of guides who are in Benteng Lingkar area </p>
<p> Tourists can only reach this beach on foot. Travel time to get to this beach from Benteng Lingkar approximately 1.5 hours. </p>
]]></string>
    <string name="pasirtitle">Pasir Putih Beach</string>
    <string name="pasiralt">Nusakambangan Island, Tambakreja</string>
    <string name="pasirdes"><![CDATA[<hr />
<p> This beach is located on the northeast of Nusakambangan Island. </p>
<P> This beach is usually used as a stopover for tourists who want to see the beach or other attractions on the island Nusakambangan. </p>
<P> On this beach there are many traders who sell food and drink to meet the needs of tourists before or after exploring Nusakambangan Island. </p>
]]></string>
    <string name="srandiltitle">Srandil Mount</string>
    <string name="srandilalt">Glempangpasir</string>
    <string name="seloktitle">Selok Mount</string>
    <string name="sodongtitle">Sodong Beach</string>
    <string name="mariatitle">Maria Cave</string>
    <string name="masigittitle">Masigit Sela Cave</string>
    <string name="masjidtitle2">Darussalam</string>
    <string name="sumolangutitle">The Tomb of Sumlangu</string>
    <string name="stakesugihantitle">Kesugihan Station</string>
    <string name="stakarangtitle">Karangkandri Station</string>
    <string name="stakroyatitle">Kroya Station</string>
    <string name="stamaostitle">Stasiun Maos</string>
    <string name="stagumilirtitle">Gumilir Station</string>
    <string name="stajeruktitle">Jeruklegi Station</string>
    <string name="stakawutitle">Kawunganten Station</string>
    <string name="stagandrungtitle">Gandrungmangun Station</string>
    <string name="stasidarejatitle">Sidareja Station</string>
    <string name="staciparititle">Cipari Station</string>
    <string name="staciltitle">Cilacap Station</string>
</resources>